--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "deploy": "astro build && wrangler deploy"
   },
   "dependencies": {
-    "astro": "^5.0.0",
     "@astrojs/react": "^4.0.0",
     "@astrojs/sitemap": "^3.0.0",
+    "astro": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "tailwindcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "remark-breaks": "^4.0.0",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.0.0",
     "wrangler": "^4.0.0"
   }
 }
